k8s/deploy-my-web-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-autoscaling
  labels:
    app: my-k8s-application
    env: prod
    owner: led
spec:
  replicas: 2
  selector:
    matchLabels:
      project: project3
  template:
    metadata:
      labels:
        project: project3
    spec:
      containers:
        - name: project3-web
          image: httpd
          ports:
            containerPort: 80
