k8s/deploy-my-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web
  labels:
    app: my-k8s-application
spec:
  selector:
    matchLabels:
      project: project1
  template:
    metadata:
      labels:
        project: project1
    spec:
      containers:
        - name: project1-web
          image: httpd
          ports:
            containerPort: 80
