k8s/pod-myapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels:
    env: prod
    app: main
    tier: frontend
    owner: led
spec:
  containers:
    - name: container-web
      image: nginx
      ports:
        - containerPort: 80

    - name: container-api
      image: gcr.io/kodekloud/centos-ssh-enabled:tomcat
      ports:
        - containerPort: 8080
