k8s/pod-myweb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env: prod
    app: main
    tier: frontend
    owner: led
spec:
  containers:
    - name: container-apache
      image: nginx:latest
      ports:
        - containerPort: 80
