k8s/ingress-my-site.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.my-site.com
    http:
      paths:
        - backend:
          serviceName: main
          servicePort: 80
  - host: www.my-site.com
    http:
      paths:
        - path: "/page1"
          backend: 
            serviceName: tomcat
            servicePort: 8080
